2006-08-30  Thomas Hisch <t.hisch@gmail.com>

	* Renamed TnyHeader to TnyCamelHeader

2006-08-30  Philip Van Hoof <pvanhoof@gnome.org>

	* Renamed TnyAccount to TnyCamelAccount
	* Renamed TnyStoreAccount to TnyCamelStoreAccount
	* Renamed TnyCamelStream to TnyStreamCamel
	* Renamed TnyStreamCamel to TnyCamelStream

2006-08-29  Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>
	
	* Fix type conflict in libtinymail-camel; only store accounts have
	folders anyway

2006-08-29  Thomas Hisch <t.hisch@gmail.com>

	* Bugfix in libtinymail-gnome-desktop/tny-account-store.c
	
2006-08-29  Philip Van Hoof <pvanhoof@gnome.org>

	* Updated the Python bindings a little bit
	* Documentation updates
	* Added some support for the doxygen documentation generator

2006-08-28  Philip Van Hoof <pvanhoof@gnome.org>

	*  Added unit tests for TnyFolderStoreQuery
	*  Added unit tests for TnyMsgIface
	*  Fixed some ugly memory leaks (reference count problems)
	* Implemented a first attempt of the get_folders_async API of
	TnyFolderStoreIface
	* Added a functional test folder-lister-async.c for the 
	get_folders_async API of TnyFolderStoreIface
	* Support for non-mainloop _async methods

	* This was a major API change

2006-08-27  Philip Van Hoof <pvanhoof@gnome.org>

	* Bugfix when switching offline and online and again getting a
	message that had been viewed already

	* Rechecked the dirty camel_object_unref hacks in tny-msg.c

2006-08-26 Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>

	* Made tinymail compile with -Wall -Werror
	* Fix some AMD64 problems
	* Fix test program (gtk_init)
	* Fix internet address parsing (camel-common)

2006-08-25  Philip Van Hoof <pvanhoof@gnome.org>

	* Further upgraded to the new get-folders API
	* Updated the API documentation

2006-08-25  Philip Van Hoof <pvanhoof@gnome.org>

	* Added the tny_msg_view_iface_clear API

	* This was a major API change

2006-08-25  Philip Van Hoof <pvanhoof@gnome.org>
