@@ -8,6 +8,7 @@
 	* Renamed TnyStoreAccount to TnyCamelStoreAccount
 	* Renamed TnyCamelStream to TnyStreamCamel
 	* Renamed TnyStreamCamel to TnyCamelStream
+	* Renamed TnyMimePart to TnyCamelMimePart
 
 2006-08-29  Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>
 	
